third_party/move/move-bytecode-verifier/transactional-tests/tests/control_flow/if_branch_diverges_5.exp
processed 1 task
task 0 lines 1-14:  run [script]
Error: error: unknown instruction `br`
   ┌─ test:12:7
   │
12 │ loop: br loop_cont
   │       ^^^^^^^^^^^^

error: unknown instruction `br`
   ┌─ test:13:5
   │
13 │     br loop
   │     ^^^^^^^


