third_party/move/move-bytecode-verifier/transactional-tests/tests/control_flow/if_branch_diverges_5.masm
//# run
script
entry public fun main()
    local l0: bool
    ld_true
    st_loc l0
    move_loc l0
    br_true loop
b1: ld_false
    ld_u64 42
    abort
loop: br loop_cont
    br loop
loop_cont: ret
